Added manager-profile-view-service and initiall implementation of verification welcome page

--- a/public/app/manager_app/profile/index.html
+++ b/public/app/manager_app/profile/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-xs-12 col-lg-4 pull-down">
                     <div class="verify_button_container">
-                        <input type="button" value="Verify Account" class="btn btn-info form-control">
+                        <a ui-sref="profile.verification" class="btn btn-success">Verify Account</a>
                     </div>
                 </div>
             </div>
