Implemented initial validations for coach-form

--- a/public/app/manager_app/profile/index.html
+++ b/public/app/manager_app/profile/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-xs-12 col-lg-4 pull-down">
                     <div class="verify_button_container">
-                        <a ui-sref="profile.verification" class="btn btn-success">Verify Account</a>
+                        <a ui-sref="verification.request" class="btn btn-success">Verify Account</a>
                     </div>
                 </div>
             </div>
