Implemented validations in coach template

--- a/public/app/manager_app/common/multiple-file-upload/multiple-file-upload-view.html
+++ b/public/app/manager_app/common/multiple-file-upload/multiple-file-upload-view.html
@@ -1,4 +1,4 @@
-<input type="file" ng-model="multipleFileVm.filesModel" name="multipleFiles" multiple
+<input type="file" ng-model="multipleFileVm.filesModel.files" name="multipleFiles" multiple
 required="multipleFileVm.required">
 <p class="error_message_container"
    ng-if="multipleFileVm.form.$submitted || multipleFileVm.form.multipleFiles.$touched">
