--- a/public/app/manager_app/verification/form/request-verification-form.html
+++ b/public/app/manager_app/verification/form/request-verification-form.html
@@ -1,5 +1,6 @@
 <form name="verificationRequestForm" ng-submit="verificationFmVm.submitForm()" novalidate>
-    <div ui-view="coach"></div>
+    <div ng-if="verificationFmVm.isCoach()" ui-view="coach"></div>
+    <div ng-if="verificationFmVm.isScout()" ui-view="scout"></div>
 
     <div class="row">
         <div class="col-xs-2">
