--- a/public/app/manager_app/profile/index.html
+++ b/public/app/manager_app/profile/index.html
@@ -17,6 +17,9 @@
                         <div class="manager_profile_image">
                             <img src="" ng-src="/site_images/profile_image_placeholder.png">
                         </div>
+                        <div ng-if="mgProfileVm.isManagerVerified()" class="verified_logo">
+                            <img ng-src="/site_images/verified.png">
+                        </div>
                     </div>
                 </div>
 
