--- a/public/app/manager_app/profile/edit.html
+++ b/public/app/manager_app/profile/edit.html
@@ -119,7 +119,7 @@
                 <div class="col-xs-12 col-lg-4">
                     <div class="form-group">
                         <label>Country:</label>
-                        <select name="country" id="country" ng-model="managerProfile.country.country_name" class="form-control"
+                        <select name="country" id="country" ng-model="managerProfile.country" class="form-control"
                                 required="required"
                                 ng-options="country for country in basicSiteConstants.countries track by country">
                             <option value="">-- Select Country --</option>
@@ -133,7 +133,7 @@
                 <div class="col-xs-12 col-lg-4">
                     <div class="form-group">
                         <label>Zip:</label>
-                        <input type="number" name="zip" id="zip" ng-model="managerProfile.zip" class="form-control"
+                        <input type="text" name="zip" id="zip" ng-model="managerProfile.zip" class="form-control"
                                required="required"
                                 ng-maxlength="5">
                         <div class="error_message_container" ng-messages="manager_profile.zip.$error"
