Added modal to the manager readonly view

--- a/public/app/manager_app/profile/index-readonly.html
+++ b/public/app/manager_app/profile/index-readonly.html
@@ -48,6 +48,10 @@
                     </span>
                 </p>
             </div>
+
+            <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center th-padding-top-15">
+                <div message-modal modal-id="test_modal" manager-type="coach" modal-button-name="Message"></div>
+            </div>
         </div>
     </div>
 </div>
