--- a/public/app/common/message/message-modal-view.html
+++ b/public/app/common/message/message-modal-view.html
@@ -4,17 +4,32 @@
 <!-- Modal -->
 <div class="modal fade" id="{{msgModalVm.modalId}}" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
+        <div class="modal-content text-left">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="myModalLabel">Contact {{msgModalVm.managerType}}</h4>
+                <h4 class="modal-title">Contact {{msgModalVm.managerType}}</h4>
             </div>
             <div class="modal-body">
+                <div class="background-cream th-padding-15 text-orange">
+                    <p class="panel-info">
+                        <strong>Are you sure you want to contact the Manager?</strong> If 'yes', enter your message for the Manager and click 'Yes', otherwise click 'Cancel'.
+                    </p>
+                    <p class="panel-info">*If you don't know what to say to the Manager, click on 'Message Samples' to see examples of what you can say to the Manager. Talenthub is here to help you get this opportunity you seek!</p>
+                </div>
 
+                <div class="form-group">
+                    <label>Message</label>
+                    <textarea class="form-control height-200" name="message" ng-model="msgSampleModalVm.message"></textarea>
+                </div>
             </div>
             <div class="modal-footer">
+                <div ng-if="msgModalVm.showSampleMessage"
+                        class="pull-left">
+                    <button type="button" class="btn btn-default" data-dismiss="modal"
+                        ng-click="msgModalVm.showSampleMessageModal()">{{msgModalVm.sampleMessageText}}</button>
+                </div>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" ng-click="">Send</button>
             </div>
