Added Send message functionality + added active user controller to get active user

--- a/public/app/manager_app/profile/index-readonly.html
+++ b/public/app/manager_app/profile/index-readonly.html
@@ -55,7 +55,10 @@
                      manager-type="coach"
                      modal-button-name="Message"
                      show-sample-message="mgProfileVm.showSampleMessage"
-                     sample-message-text="Sample Message"></div>
+                     sample-message-text="Sample Message"
+                     talent-id=""
+                     manager-id="mgProfileVm.model.user_id"
+                ></div>
 
                 <div message-samples-modal
                      modal-id="{{mgProfileVm.sampleMessageModalId}}"></div>
