--- a/public/app/common/message/message-modal-view.html
+++ b/public/app/common/message/message-modal-view.html
@@ -20,8 +20,11 @@
                 </div>
 
                 <div class="form-group">
+                    <div ng-if="msgModalVm.messageSent">
+                        <p class="alert alert-success">You have successfully sent a message to the manager!</p>
+                    </div>
                     <label>Message</label>
-                    <textarea class="form-control height-200" name="message" ng-model="msgSampleModalVm.message"></textarea>
+                    <textarea class="form-control height-200" name="message" ng-model="msgSampleModalVm.modal.message"></textarea>
                 </div>
             </div>
             <div class="modal-footer">
@@ -31,7 +34,7 @@
                         ng-click="msgModalVm.showSampleMessageModal()">{{msgModalVm.sampleMessageText}}</button>
                 </div>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" ng-click="">Send</button>
+                <button type="button" class="btn btn-primary" ng-click="msgModalVm.sendMessage()">Send</button>
             </div>
         </div>
     </div>
