Implemented functionality to get active user from server and at client side

--- a/public/app/manager_app/profile/index-readonly.html
+++ b/public/app/manager_app/profile/index-readonly.html
@@ -56,7 +56,7 @@
                      modal-button-name="Message"
                      show-sample-message="mgProfileVm.showSampleMessage"
                      sample-message-text="Sample Message"
-                     talent-id=""
+                     talent-id="mgProfileVm.talentProfile.user_id"
                      manager-id="mgProfileVm.model.user_id"
                 ></div>
 
