--- a/public/app/common/message/message-modal-view.html
+++ b/public/app/common/message/message-modal-view.html
@@ -18,13 +18,15 @@
                     </p>
                     <p class="panel-info">*If you don't know what to say to the Manager, click on 'Message Samples' to see examples of what you can say to the Manager. Talenthub is here to help you get this opportunity you seek!</p>
                 </div>
-
+                <br/>
                 <div class="form-group">
                     <div ng-if="msgModalVm.messageSent">
                         <p class="alert alert-success">You have successfully sent a message to the manager!</p>
                     </div>
-                    <label>Message</label>
-                    <textarea class="form-control height-200" name="message" ng-model="msgSampleModalVm.modal.message"></textarea>
+                    <div ng-if="!msgModalVm.messageSent">
+                        <label>Message</label>
+                        <textarea class="form-control height-200" name="message" ng-model="msgModalVm.model.message"></textarea>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
@@ -33,8 +35,10 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal"
                         ng-click="msgModalVm.showSampleMessageModal()">{{msgModalVm.sampleMessageText}}</button>
                 </div>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" ng-click="msgModalVm.sendMessage()">Send</button>
+                <div ng-if="!msgModalVm.messageSent">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" ng-click="msgModalVm.sendMessage()">Send</button>
+                </div>
             </div>
         </div>
     </div>
