--- a/public/app/manager_app/help-centre/help-centre.html
+++ b/public/app/manager_app/help-centre/help-centre.html
@@ -18,7 +18,7 @@
 
         <div class="row">
             <div class="col-xs-2 col-xs-offset-5 text-center">
-                <button class="btn btn-info btn-lg" type="submit">Submit</button>
+                <button class="btn btn-info btn-lg" ng-disabled="!helpForm.$valid" type="submit">Submit</button>
             </div>
         </div>
     </form>
