--- a/public/app/manager_app/profile/index.html
+++ b/public/app/manager_app/profile/index.html
@@ -13,7 +13,7 @@
                 <div class="manager_cover_image"></div>
                 <!-- Profile Image -->
                 <div class="row">
-                    <div class="col-xs-12 col-lg-2 col-lg-offset-5">
+                    <div class="col-xs-4 col-xs-offset-4 col-lg-2 col-lg-offset-5">
                         <div class="manager_profile_image">
                             <img src="" ng-src="/site_images/profile_image_placeholder.png">
                         </div>
